--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@ function addKeygen() {
 
 			// adding text
 			$("<keygen/>", {
-				name: name
+				name: name,
+
 			})
 			, $("<br/>")
 		);
